--- a/index.html
+++ b/index.html
@@ -1,15 +1,139 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nome Cognome</title>
-
+    <title>jamil howlader</title>
+    <!-- Link a bootsrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">jamil</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="./pages/stage.html">Stage</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                    </li> -->
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <!-- Sezione di benvenuto -->
+    <section class="benvenuto">
+        <div>
+            <h2>Benvenuto nel mio sito</h2>
+            <p>jamil howlader</p>
+        </div>
+    </section>
+
+    <!-- Sezione Bio  -->
+    <section class="container-fluid">
+        <!-- faccio la riga  -->
+        <div class="row">
+            <!-- faccio due colonne  -->
+            <div class="col">    
+            </div>
+            <div class="col bio">
+                <p>Qui ci scrivo le mie 4 righe di Bio</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sezione passioni  -->
+    <section class="container-fluid passioni">
+       <div class="row">
+            <h3>Le mie Passioni</h3>
+       </div>
+       <div class="row justify-content-around aligh-items-center">
+
+            <div class="card h-100 " style="width: 18rem;">
+                <img src="./img/gatto-norvegese-delle-foreste-1024x683.webp" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Lego</p>
+                </div>
+            </div>
+
+            <div class="card h-100 " style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">ciao</p>
+                </div>
+            </div>
+
+            <div class="card h-100 " style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Passione 1</p>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+    <section class="container-fluid cv ">
+        <div class="row">
+            <div class="col-lg-7 foglio ">
+                <h3 class="text-center">jamil howlader </h3>
+                <p class="text-center">operatore <informatico> </p>
+                <hr>
+                <h4>bio</h4>
+                <p>qui andro scrivreere 3 righe di qualcosa su di me </p>
+                <hr>
+                <h4 class="pt-2">esprienza lavorativa </h4>
+                <p class="pt-3">
+                    <b>ruolo ricoperto</b> - posto di lavoro 
+                    <i>mese anno - mese anno </i> <br>
+                    cosa facevo 
+
+                </p>
+                <p class="pt-3">
+                    <b>ruolo ricoperto</b> - posto di lavoro 
+                    <i>mese anno - mese anno </i> <br>
+                    cosa facevo 
+
+                </p>
+                <hr>
+                <h4 class="pt-2">istruzione</h4>
+                <p class="paget-2">
+                    <b>operatore informatico <b> - immaginazione e lavoro IEFP
+                        <i>feb 2023 - giugno 2026</i>
+                </p>
+                  <p class="paget-2">
+                    <b>operatore informatico <b> - molinari
+                        <i>settembre 2023 - febbraio 2024</i>
+                </p>
+                <hr>
+                <h4 class="pt-2">ligue</h4>
+                <p class="pt-3">
+                    <b>bangla</b>-madrelingua <br>
+                    <b>italiano </b>
+                    <b>inglese</b>
+                    <b></b>
+                </p>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <button type="button" class="btn btn-primary">scarica il CV <t/button>
+        </div>
+    </section>
+
+    <!-- script di bootstrap  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </body>
 </html>
