--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <h4 class="pt-2">ligue</h4>
                 <p class="pt-3">
                     <b>bangla</b>-madrelingua <br>
-                    <b>italiano </b>
+                    <b>italiano </b><br>
                     <b>inglese</b>
                     <b></b>
                 </p>
@@ -131,6 +131,47 @@
             <button type="button" class="btn btn-primary">scarica il CV <t/button>
         </div>
     </section>
+
+
+
+
+    </section>
+
+    <footer>
+       <div class="container-fluid">
+            <div class="row">
+                <div class="col-4">
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+                        </svg>
+                        <b>Indirizzo:</b> Viar44vw4 w4rr rw 895958, Paese
+                    </p>
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-phone-fill" viewBox="0 0 16 16">
+                        <path d="M3 2a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2zm6 11a1 1 0 1 0-2 0 1 1 0 0 0 2 0"/>
+                        </svg>
+                        <b>Telefono:</b> +39 3593040344
+                    </p>
+                </div>
+
+                <div class="col-4">
+                    <p class="text-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
+                        </svg>
+                        <b>E-mail:</b> jamil.howlader@immaginazioneelavoro.it
+                    </p>
+                </div>
+
+                <div class="col-4 d-flex justify-content-center align-items-center">
+                    <img src="./img/gatto-norvegese-delle-foreste-1024x683.webp" class="img-fluid logo" alt="">
+                </div>
+
+            </div>
+       </div>
+    </footer>
+  
 
     <!-- script di bootstrap  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
