--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
             </div>
 
             <div class="card h-100 " style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./img/calcio.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text">ciao</p>
                 </div>
             </div>
 
             <div class="card h-100 " style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./img/video giochi.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text">Passione 1</p>
                 </div>
