--- a/pages/extra.html
+++ b/pages/extra.html
@@ -40,5 +40,49 @@
     <!-- script di bootstrap  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="../script.js"></script>
+
+
+
+
+    </head>
+<body class="p-4">
+
+    <h2>Barra di progresso controllata</h2>
+
+    <div class="mb-3">
+        <label class="form-label">Inserisci un numero (0 - 100):</label>
+        <input type="number" id="progressInput" class="form-control" min="0" max="100" value="0">
+    </div>
+
+    <button class="btn btn-primary mb-3" onclick="updateProgress()">Aggiorna</button>
+
+    <div class="progress" style="height: 30px;">
+        <div id="progressBar" class="progress-bar" style="width: 0%;">0%</div>
+    </div>
+
+    <hr class="my-5">
+
+    <h2>Calcolatrice</h2>
+
+    <div class="input-group mb-3" style="max-width: 400px;">
+        <input type="number" id="num1" class="form-control" placeholder="Numero 1">
+        <select id="operator" class="form-select">
+            <option value="+">+</option>
+            <option value="-">−</option>
+            <option value="*">×</option>
+            <option value="/">÷</option>
+        </select>
+        <input type="number" id="num2" class="form-control" placeholder="Numero 2">
+    </div>
+
+    <button class="btn btn-success mb-3" onclick="calculate()">Calcola</button>
+
+    <h4>Risultato: <span id="result">—</span></h4>
+
+   
+
+</body>
+
+
 </body>
 </html>
